restructure the page

--- a/index.html
+++ b/index.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="grid-container">
-        <nav></nav>
+        <nav>
+           <ul>
+               <li><a href="#"><img src="img/menu-icon.png" alt="menu icon"></a></li>
+               <li><a href="#"><img src="" alt="youtube logo">Youtube</a></li>
+               <li class="search"><input type="search" name="search-bar" id="search-bar" placeholder="Search"><input type="image" src="img/search-icon.png" alt="submit search"></li>
+           </ul>
+        </nav>
         <main>
-            <a href="#"><img src="img/menu-icon.png" alt="Menu icon" style="background-color: transparent;"></a>
-            <img src="img/subscribe-icon.jpg" alt="">
+            <iframe src="https://youtu.be/bxm89gSRUOE" frameborder="0"></iframe>
         </main>
-
-    </div>
-</body>
-=======
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Youtube Clone</title>
-    </head>
-    <body>
-        <header>
-            header here
-        </header>
-
-        <section>
-            <article class="video-comments-container">
-                <div id="video-player">
-                    video palyer here
-                </div>
-                <div id="info">
-                    comments under video here
-                </div>
+        <article class="video-comments">
+            <h1>Countributing to Open Source Part I: The Easy Way</h1>
+            <div>
+                <img src="img/letter-T.jpeg" alt="letter T"> 
+                <span>The Odin Peoject</span>
+            </div>
+        </article>
+        <article class="info">
+            <h2>
+                Published on Feb 27, 2014
+            </h2>
+            <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project at http://theodinproject.com.</p>
+        </article>
+        <aside>
+            <ul class="remmended-video">
+                <li><iframe src="https://youtu.be/roywYSEPSvc" frameborder="0"></iframe>
+                <h1>Contributing to Open Source Part II: The Real Way</h1>
+                <p>The Odin Project
+                    29,985 views
+                    14:25
+                    </p>
+                </li>
+            </ul>
+            <!-- <article class="recommended-video">
+                recomend video
             </article>
-            <aside class="recommended-videos">
-                <article>
-                    side list of recommended videos here
-                </article>
-            </aside>
-        </section>
-    </body>
->>>>>>> d289bfcb6dfb230455bb9fd397f9596e016efdc8
+            <article class="video-comments"></article> -->
+        </aside>
+    </div>
+    <!-- <header>
+        header here
+    </header>
+
+    <section>
+        <article class="video-comments-container">
+            <div id="video-player">
+                video palyer here
+            </div>
+            <div id="info">
+                comments under video here
+            </div>
+        </article>
+        <aside class="recommended-videos">
+            <article>
+                side list of recommended videos here
+            </article>
+        </aside>
+    </section> -->
+</body>
 </html>
+  
+      
